# tokalyzer

./: README.md  pyproject.toml
tokalyzer/: analyze.py  rules.py  utils.py
tokalyzer/rules_dir/: duplicate_ids.py  duplicate_keys.py  missing_id.py
