[tool.poetry]
name = "tokalyzer"
version = "0.1.0"
description = "Analyze tokenizers for oddities"
authors = ["Joe Lucas <joe@joetl.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tokenizers = "^0.19.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
